Add responsive grid using css

--- a/Week11/index.html
+++ b/Week11/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="grid-header"></div>
+        <div class="grid-svg">
+            <svg id = "svg-canvas" viewBox = "0 0 500 300" xmlns = "http://www.w3.org/2000/svg">
+            </svg>
+        </div>
+        <div class="grid-control"></div>
+        <div class="grid-text"></div>
+    </div>
 </body>
 </html>
